v1.7.0/product-specifications/core-functions/3.-validate-event.md
# 3. Validate event

In order to register the vital event, the declaration form must be validated by checking all the details recorded and any supporting documents attached.

In OpenCRVS, the declaration form can be reviewed side by side with the supporting documents to ensure that it is accurate before the vital event is registered. If the information is correct, a user with `scope:record.register` can go on to register the vital event; if it is not correct, it can be sent for updates if they have the scope `scope:record.declaration-send-for-updates`.

In the case where a Registrar has an assistant to conduct initial checks, eg. a Registration Agent with `scope:record.declaration-send-for-approval.` They can review a declaration and subsequently send it for approval to a user with `scope:record.register` .

### **Pre-condition**

A record is in the Ready for Review workqueue with the status ‘In Review’

### **Triggers**

A user with `scope:record.declaration-send-for-approval` or `scope:record.register` assigns and downloads the declaration

### **Standard flow**

1. User navigates to Ready for Review workqueue
2. User assigns themselves to the record
3. Declaration is downloaded and is now available to be validated offline
4. User clicks “Review”
5. User validates declaration against supporting documents
6. Available actions depending on the user's assigned scopes:
   1. `scope:record.register` > Register
   2. `scope:record.declaration-send-for-approval`> Send for approval
7. User is prompted to confirm their action
8. On confirming, declaration is sent to the Outbox for processing
9. Once processed the declaration status is updated
   1. `scope:record.register` > Status = Registered
   2. `scope:record.declaration-send-for-approval`> Status = Validated

### **Post conditions**

* Declaration is shown to the users workqueue depending on their assigned scopes
  1. Ready to review. If`scope:record.register`
  2. Sent for approval. If `scope:record.declaration-send-for-approval`
  3. Ready to Print. If `scope:record.registration-print&issue-certified-copies`
* Record audit is updated to show the last action

### **Variations/Exceptions**

* If updates are required and the user has `scope:record.declaration-send-for-updates`. They can choose to send the declaration to the Requires Updates workqueue. Informant receives sms notification that their declaration was rejected and recommend them to visit the office.
* The validator can choose to change a part of the declaration. If so they will receive a warning prompt about making changes. Before navigating them to the required section of the form. A audit log of this change is recorded in Record Audit.

{% embed url="https://youtu.be/M1dKPVk5Zzw" %}
